// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates HorizontalStack layout 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android=\\"http://schemas.android.com/apk/res/android\\"
    xmlns:app=\\"http://schemas.android.com/apk/res-auto\\"
    xmlns:tools=\\"http://schemas.android.com/tools\\"
    android:id=\\"@+id/container\\"
    android:layout_width=\\"match_parent\\"
    android:layout_height=\\"match_parent\\">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id=\\"@+id/view\\"
      android:layout_width=\\"0dp\\"
      android:layout_height=\\"match_parent\\"
      app:layout_constraintStart_toStartOf=\\"parent\\"
      app:layout_constraintEnd_toStartOf=\\"@id/view2\\"
      app:layout_constraintTop_toTopOf=\\"parent\\"
      app:layout_constraintBottom_toBottomOf=\\"parent\\" />
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id=\\"@+id/view2\\"
      android:layout_width=\\"0dp\\"
      android:layout_height=\\"match_parent\\"
      app:layout_constraintStart_toEndOf=\\"@id/view\\"
      app:layout_constraintEnd_toStartOf=\\"@id/view3\\"
      app:layout_constraintTop_toTopOf=\\"parent\\"
      app:layout_constraintBottom_toBottomOf=\\"parent\\" />
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id=\\"@+id/view3\\"
      android:layout_width=\\"0dp\\"
      android:layout_height=\\"match_parent\\"
      app:layout_constraintStart_toEndOf=\\"@id/view2\\"
      app:layout_constraintEnd_toEndOf=\\"parent\\"
      app:layout_constraintTop_toTopOf=\\"parent\\"
      app:layout_constraintBottom_toBottomOf=\\"parent\\" />
</androidx.constraintlayout.widget.ConstraintLayout>"
`;

exports[`creates Text layout 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android=\\"http://schemas.android.com/apk/res/android\\"
    xmlns:app=\\"http://schemas.android.com/apk/res-auto\\"
    xmlns:tools=\\"http://schemas.android.com/tools\\"
    android:id=\\"@+id/view\\"
    android:layout_width=\\"match_parent\\"
    android:layout_height=\\"match_parent\\">
  <TextView android:id=\\"@+id/text\\" android:text=\\"Hello\\" />
</androidx.constraintlayout.widget.ConstraintLayout>"
`;

exports[`creates View layout 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android=\\"http://schemas.android.com/apk/res/android\\"
    xmlns:app=\\"http://schemas.android.com/apk/res-auto\\"
    xmlns:tools=\\"http://schemas.android.com/tools\\"
    android:id=\\"@+id/container\\"
    android:layout_width=\\"100dp\\"
    android:layout_height=\\"100dp\\"
    android:background=\\"#FAB\\" />"
`;

exports[`creates View with children layout 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android=\\"http://schemas.android.com/apk/res/android\\"
    xmlns:app=\\"http://schemas.android.com/apk/res-auto\\"
    xmlns:tools=\\"http://schemas.android.com/tools\\"
    android:id=\\"@+id/container\\"
    android:layout_width=\\"match_parent\\"
    android:layout_height=\\"match_parent\\">
  <androidx.constraintlayout.widget.ConstraintLayout android:id=\\"@+id/child1\\" />
  <androidx.constraintlayout.widget.ConstraintLayout android:id=\\"@+id/child2\\" />
</androidx.constraintlayout.widget.ConstraintLayout>"
`;
